<resources>
    <string name="app_name">Android Test</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="multiply">×</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="division">÷</string>
    <string name="percent">%</string>
    <string name="negative">+/-</string>
    <string name="ac">AC</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="xml_login">XML验证登录</string>
    <string name="json_login">JSON验证登录</string>
    <string name="beijing">北京</string>
    <string name="shanghai">上海</string>
    <string name="guangzhou">广州</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>

    <string name="insert">添加</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>
    <string name="search">查询</string>

</resources>