<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_margin="15pt"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:shapeAppearanceOverlay="@style/circleImageStyle"
        android:src="@drawable/avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="text"
            android:importantForAutofill="no"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/insertBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cornerRadius="30dp"
            android:text="@string/insert" />

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="5dp"
            android:id="@+id/searchBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cornerRadius="30dp"
            android:text="@string/search" />

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="5dp"
            android:id="@+id/updateBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cornerRadius="30dp"
            android:text="@string/update" />

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="5dp"
            android:id="@+id/deleteBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cornerRadius="30dp"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>