<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/beijingBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/beijing"
            app:cornerRadius="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shanghaiBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/shanghai"
            app:cornerRadius="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/guangzhouBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/guangzhou"
            app:cornerRadius="30dp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weather_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="8dp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="xml"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="8dp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="city"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="8dp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="weather"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="8dp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="temp"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="8dp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="pm"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="8dp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="wind"
        android:textSize="20sp" />


</LinearLayout>